[gd_scene load_steps=8 format=3 uid="uid://b4tvnlm52jblo"]

[ext_resource type="Script" uid="uid://cugl7m4x07l0q" path="res://objects/items/ui/item_descriptions/item_description.gd" id="1_ydmee"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="2_ae5mu"]
[ext_resource type="Texture2D" uid="uid://xf7s2qvt73i" path="res://ui_assets/misc/quality_star.png" id="3_8b6nr"]
[ext_resource type="Texture2D" uid="uid://c87bgol1mb7y8" path="res://ui_assets/misc/quality_star_unfilled.png" id="3_erlbd"]

[sub_resource type="LabelSettings" id="LabelSettings_xr0dj"]
font = ExtResource("2_ae5mu")
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gqb1j"]
font = ExtResource("2_ae5mu")
font_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fw8o7"]
font = ExtResource("2_ae5mu")
font_size = 20
shadow_color = Color(0, 0, 0, 1)

[node name="ItemDescription" type="CanvasLayer"]
layer = -1
script = ExtResource("1_ydmee")
star_filled = ExtResource("3_8b6nr")
star_unfilled = ExtResource("3_erlbd")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 41.0
offset_right = 296.0
offset_bottom = 194.0

[node name="NameLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "ITEM NAME"
label_settings = SubResource("LabelSettings_xr0dj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QualityDisplay" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.5
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2

[node name="QualityLabel" type="Label" parent="UI/QualityDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Rating:"
label_settings = SubResource("LabelSettings_gqb1j")

[node name="StarContainer" type="HBoxContainer" parent="UI/QualityDisplay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -12.0
offset_right = -27.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Star" type="TextureRect" parent="UI/QualityDisplay/StarContainer"]
layout_mode = 2
texture = ExtResource("3_8b6nr")
expand_mode = 2

[node name="Star2" type="TextureRect" parent="UI/QualityDisplay/StarContainer"]
layout_mode = 2
texture = ExtResource("3_8b6nr")
expand_mode = 2

[node name="Star3" type="TextureRect" parent="UI/QualityDisplay/StarContainer"]
layout_mode = 2
texture = ExtResource("3_8b6nr")
expand_mode = 2

[node name="Star4" type="TextureRect" parent="UI/QualityDisplay/StarContainer"]
layout_mode = 2
texture = ExtResource("3_8b6nr")
expand_mode = 2

[node name="Star5" type="TextureRect" parent="UI/QualityDisplay/StarContainer"]
layout_mode = 2
texture = ExtResource("3_8b6nr")
expand_mode = 2

[node name="Description" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -81.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 0
text = "This item does stuff."
label_settings = SubResource("LabelSettings_fw8o7")
autowrap_mode = 2
